--- a/assets/style.css
+++ b/assets/style.css
@@ -20,7 +20,7 @@
     background-color: var(--blue);
   }
 
- .form-input{
+ .city-input{
     margin-top: 5px;
     width: 100%;
     height: fit-content;
